fix overflow page contact

--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -1,10 +1,11 @@
 .container {
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 p {
